<resources>
    <string name="app_name">Campybara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="campybara_logo">Campybara Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="select_photo">Select Photo</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_campsite">Create Campsite</string>
    <string name="el_maisone_del_capy">El maisone del Capy</string>
    <string name="loading">loading</string>
    <string-array name="reservation_spinner">
        <item>Group One</item>
        <item>Group Two</item>
        <item>Group Three</item>
    </string-array>
</resources>